@@ -219,6 +219,21 @@ class DatabaseOperations(BaseDatabaseOperations):
         second = datetime.datetime(value, 12, 31, 23, 59, 59, 999)
         return [first, second]
 
+    def convert_values(self, value, field):
+        """
+        MSSQL needs help with date fields that might come out as strings.
+        """
+        internal_type = field.get_internal_type()
+        if internal_type in ('DateField', 'DateTimeField', 'TimeField'):
+            compiler = self.compiler('SQLCompiler')
+            if internal_type == 'DateTimeField':
+                return compiler._datetime_field.to_python(value)
+            elif internal_type == 'DateField':
+                return compiler._date_field.to_python(value)
+            elif internal_type == 'TimeField':
+                return compiler._time_field.to_python(value)
+        return super(DatabaseOperations, self).convert_values(value, field)
+
     def bulk_insert_sql(self, fields, num_values):
         """
         Format the SQL for bulk insert
