@@ -18,6 +18,8 @@ v1.4 (In Development)
   Denisenko
 - Fixed constraint checking. :issue:`35` Thanks Mikhail Denisenko
 - Enabled ``can_introspect_autofield`` database feature. :djangoticket:`21097`
+- Any date related field should now return from the database as the appropriate Python type, instead of always being a
+  datetime.
 
 v1.3.1
 ------
